@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-13T08:15:36Z",
-  "count_outdated" : 387,
-  "uniques_outdated" : 210,
-  "count" : 419,
+  "timestamp" : "2022-07-14T01:09:56Z",
+  "count_outdated" : 389,
+  "uniques_outdated" : 211,
+  "count" : 421,
   "uniques" : 227,
   "clones" : [
-    {
-      "timestamp": "2022-06-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-30T00:00:00Z",
       "count": 1,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
